# quartz

./: .cursorignore  .dockerignore  .gitignore  .gitmodules  .rustfmt.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  cargo-generate.toml  mtcs.manifest.template  obligato_web3_liquidity_demo.md  release.sh  remove_mtcs_from_workspace.diff
apps/mtcs/enclave/: Cargo.toml  README.md  quartz.manifest.template
apps/mtcs/enclave/proto/: mtcs.proto
apps/mtcs/enclave/src/: cli.rs  lib.rs  main.rs  mtcs_server.rs  proto.rs  types.rs  wslistener.rs
apps/mtcs/scripts/: Cargo.toml  aggregator.sh  build.sh  deploy.sh  handshake.sh  listen.sh  start.sh  start45.sh  transact.sh
apps/mtcs/scripts/src/: lib.rs  types.rs  utils.rs
apps/transfers/: Cargo.toml  README.md  cargo-generate.toml  quartz.toml
apps/transfers/contracts/: Cargo.toml  deploy-contract-Neutrond.sh  deploy-contract.sh  transfers_contract.wasm
apps/transfers/contracts/.cargo/: config
apps/transfers/contracts/schema/: transfers.json
apps/transfers/contracts/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
apps/transfers/enclave/: Cargo.toml  build.rs  quartz.manifest.template
apps/transfers/enclave/proto/: transfers.proto
apps/transfers/enclave/src/: cli.rs  listen_server.rs  main.rs  mtcs_server.rs  state.rs  transfers_server.rs  wslistener.rs
apps/transfers/frontend/: .env neutron.example  .env.example  .gitignore  .prettierrc  README.md  env.d.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
apps/transfers/frontend/scripts/: generate.js  rebuild-component-index.js
apps/transfers/frontend/src/: instrumentation.ts
apps/transfers/frontend/tests/: global.setup.ts
apps/transfers/schema/: transfers.json
apps/transfers/schema/raw/: execute.json
apps/transfers/scripts/: build.sh  decrypt_ephemeral.sh  deploy.sh  deployNeutron.sh  handshake.sh  handshakeNeutron.sh  listen.sh  listenNeutron.sh  start.sh  startNeutron.sh  transfer.sh
apps/transfers/src/: contract.rs  lib.rs  msg.rs  state.rs
cli/: Cargo.toml  Dockerfile  README.md  instantiate.msg
cli/example/contracts/src/: contract.rs  error.rs  msg.rs
cli/example/enclave/src/: main.rs
cli/example/frontend/: tailwind.config.ts
cli/example/scripts/: build.sh
cli/scripts/: relay.sh
cli/src/: cache.rs  cli.rs  config.rs  error.rs  handler.rs  main.rs  request.rs  response.rs
cli/src/handler/: contract_build.rs  contract_deploy.rs  contract_tx.rs  deploy.rs  dev.rs  enclave_build.rs  enclave_start.rs  handshake.rs  init.rs  listen.rs
cli/src/handler/utils/: helpers.rs  mod.rs  relay.rs  types.rs
cli/src/request/: contract_build.rs  contract_deploy.rs  contract_tx.rs  deploy.rs  dev.rs  enclave_build.rs  enclave_start.rs  handshake.rs  init.rs  listen.rs
cli/src/response/: contract_build.rs  contract_deploy.rs  contract_tx.rs  deploy.rs  enclave_build.rs  handshake.rs  init.rs  listen.rs
core/light-client-proofs/cw-proof/: Cargo.toml
core/light-client-proofs/tm-stateless-verifier/: Cargo.toml
core/quartz/: Cargo.toml  README.md  quartz.manifest.template
core/quartz-common/: Cargo.toml
core/quartz-common/src/: lib.rs  quartz_macro.rs
core/quartz/src/: attestor.rs  error.rs  lib.rs  mtcs_server.rs  server.rs  types.rs
crates/cli/: Cargo.toml  Dockerfile  README.md
crates/cli/src/: cache.rs  cli.rs  config.rs  error.rs  handler.rs  main.rs  request.rs  response.rs
crates/cli/src/handler/: contract_build.rs  contract_deploy.rs  dev.rs  enclave_build.rs  enclave_start.rs  handshake.rs  init.rs  print_fmspc.rs
crates/cli/src/request/: contract_deploy.rs  dev.rs  enclave_start.rs  handshake.rs  init.rs  print_fmspc.rs
crates/cli/src/response/: contract_build.rs  dev.rs  enclave_build.rs  enclave_start.rs  handshake.rs  print_fmspc.rs
crates/common/: Cargo.toml  README.md
crates/common/src/: lib.rs
crates/contracts/core/: Cargo.toml  README.md  SPEC.md
crates/contracts/core/derive/: Cargo.toml
crates/contracts/core/src/: error.rs  lib.rs  state.rs
crates/contracts/cw-proof/: Cargo.toml
crates/contracts/dcap-verifier/: Cargo.toml  README.md
crates/contracts/dcap-verifier/msgs/: Cargo.toml  README.md
crates/contracts/dcap-verifier/src/: contract.rs
crates/contracts/tcbinfo/: Cargo.toml  README.md
crates/contracts/tcbinfo/msgs/: Cargo.toml  README.md
crates/contracts/tcbinfo/src/: contract.rs  helpers.rs  integration_tests.rs  state.rs
crates/contracts/tee-ra/: Cargo.toml  README.md
crates/contracts/tee-ra/src/: intel_sgx.rs
crates/contracts/tm-stateless-verifier/: Cargo.toml
crates/contracts/tm-stateless-verifier/src/: error.rs  lib.rs
crates/enclave/core/: .gitignore  Cargo.toml  README.md  build.rs  quartz.manifest.template
crates/enclave/core/src/: attestor.rs  backup_restore.rs  chain_client.rs  event.rs  grpc.rs  handler.rs  host.rs  key_manager.rs  kv_store.rs  lib.rs  proof_of_publication.rs  server.rs  signer.rs  store.rs  types.rs
crates/enclave/proto/: Cargo.toml  README.md
crates/enclave/proto/proto/: quartz.proto
crates/enclave/tm-stateless-verifier/: Cargo.toml  README.md
enclaves/quartz/: Cargo.toml  Dockerfile  README.md  build.rs  quartz.manifest.template
enclaves/quartz/proto/: mtcs.proto
enclaves/quartz/src/: attestor.rs  cli.rs  main.rs  mtcs_server.rs  proto.rs  server.rs  types.rs
relayer/: Cargo.toml
relayer/scripts/: relay.sh  relayNeutron.sh
relayer/src/: cli.rs  main.rs
utils/cw-proof/: Cargo.toml
utils/cw-proof/src/: error.rs  lib.rs
utils/cw-prover/: Cargo.toml  query.proof
utils/cw-prover/src/: main.rs  merkle.rs
utils/cycles-sync/: Cargo.toml
utils/cycles-sync/src/: cli.rs  lib.rs  main.rs  types.rs  wasmd_client.rs
utils/mtcs-intent/: .gitignore  Cargo.toml
utils/mtcs-intent/src/: main.rs
utils/quartz-relayer/: Cargo.toml
utils/quartz-relayer/scripts/: relay.sh
utils/quartz-relayer/src/: cli.rs  main.rs  types.rs
utils/tm-prover/: Cargo.toml  README.md  light-client-proof.json
utils/tm-prover/src/: cli.rs  config.rs  lib.rs  main.rs  prover.rs
(+414 files in other folders)
