[workspace]
resolver = "2"
members = [
    "core/light-client-proofs/*",
    "core/quartz",
    "cosmwasm/packages/*",
    "utils/*",
]
exclude = ["apps/mtcs/contracts/cw-tee-mtcs"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.71.1"
license = ""
readme = "README.md"
repository = "https://github.com/informalsystems/cycles-quartz"
authors = ["Informal Systems <hello@informal.systems>"]

[workspace.dependencies]
# external
async-trait = "0.1.79"
bip32 = { version = "0.5.1", features = ["alloc"] }
clap = { version = "4.1.8", features = ["derive"] }
color-eyre = "0.6.2"
der = { version = "0.7.9", default-features = false }
displaydoc = { version = "0.2.4", default-features = false }
ecies = { version = "0.2.3", default-features = false, features = ["pure"] }
futures = "0.3.27"
hex = { version = "0.4.3", default-features = false }
hex-literal = "0.4.1"
k256 = { version = "0.13.2", default-features = false, features = ["ecdsa", "alloc"] }
num-bigint = "0.4.4"
prost = { version = "0.12.3", default-features = false }
rand = "0.8.5"
rand_core = { version = "0.6", features = ["std"] }
reqwest = { version = "0.12.2", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.94"
serde_with = { version = "3.4.0", default-features = false, features = ["hex", "macros"] }
sha2 = "0.10.8"
subtle-encoding = { version = "0.5.1", features = ["bech32-preview"] }
tempfile = "3"
thiserror = "1.0.49"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.11"
tonic-build = "0.11"
tracing = "0.1.39"
tracing-subscriber = "0.3.17"
uuid = { version = "1.4.1", features = ["serde"] }
x509-cert = { version = "0.2.5", default-features = false }
zeroize = { version = "1.7.0", default-features = false }

# cosmos
cosmos-sdk-proto = "=0.16.0"
cosmrs = { version = "=0.11.0", default-features = false }
cosmwasm-schema = "1.4.0"
cosmwasm-std = "1.5.2"
cw-storage-plus = "1.1.0"
ics23 = { version = "0.11.0", default-features = false, features = ["host-functions"] }
tendermint = { version = "=0.34.0", default-features = false }
tendermint-light-client = { version = "=0.34.0", default-features = false, features = ["rust-crypto"] }
tendermint-light-client-detector = "=0.34.0"
tendermint-rpc = { version = "=0.34.0", default-features = false, features = ["http-client"] }

# mobilecoin
mc-sgx-core-types = { git = "https://github.com/informalsystems/sgx" }
mc-sgx-dcap-types = { git = "https://github.com/informalsystems/sgx" }
mc-sgx-dcap-sys-types = { git = "https://github.com/informalsystems/sgx" }
mc-attestation-verifier = { git = "https://github.com/informalsystems/attestation" }

# quartz
cw-proof = { path = "core/light-client-proofs/cw-proof" }
cw-tee-mtcs = { path = "apps/mtcs/contracts/cw-tee-mtcs" }
cycles-sync = { path = "utils/cycles-sync" }
mtcs = { git = "ssh://git@github.com/informalsystems/mtcs.git" }
quartz-cw = { path = "cosmwasm/packages/quartz-cw" }
quartz-proto = { path = "core/quartz-proto" }
quartz-relayer = { path = "relayer" }
quartz-tee-ra = { path = "cosmwasm/packages/quartz-tee-ra" }
tm-stateless-verifier = { path = "core/light-client-proofs/tm-stateless-verifier" }
