[package]
name = "quartz"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["blockchain", "cosmos", "tendermint", "cycles", "quartz"]
readme = "README.md"

[dependencies]
async-trait.workspace = true
cargo-generate.workspace = true
clap = { workspace = true, features=["env"] }
color-eyre.workspace = true
displaydoc.workspace = true
dirs = "5.0.1"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
hex.workspace = true
k256.workspace = true
prost.workspace = true
tokio = { workspace = true, features = ["process"] }
tonic.workspace = true
once_cell = "1.19.0"
reqwest = { version = "0.12.2", default-features = false, features = ["json", "rustls-tls"] }
anyhow = "1.0.86"
base64 = "0.22.1"
subtle-encoding = "0.5.1"
futures-util = "0.3.30"
target-lexicon = "0.12.16"
regex = "1.10.5"
watchexec = "4.1.0"
watchexec-events = "3.0.0"
watchexec-signals = "3.0.0"
miette = "7.2.0"
ctrlc = { version = "3.4.5", features=["termination"] }
xxhash-rust = { version = "0.8.12", features=["xxh3"] }

# cosmos
cosmrs.workspace = true
cosmwasm-std.workspace = true
tendermint.workspace = true
tendermint-light-client.workspace = true
tendermint-rpc = { workspace = true, features=["websocket-client", "http-client"]}

cycles-sync = { workspace = true}
tm-prover = { workspace = true}
quartz-common = { workspace = true, features=["contract"]}
quartz-tee-ra = { workspace = true}
mtcs-enclave = { workspace = true, optional = false}
