[package]
name = "quartz-relayer"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["blockchain", "cosmos", "tendermint", "cycles", "quartz"]
readme = "README.md"

[dependencies]
# external
clap.workspace = true
displaydoc.workspace = true
ecies.workspace = true
k256.workspace = true
serde.workspace = true
serde_json.workspace = true
subtle-encoding.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tonic.workspace = true
tokio.workspace = true

# cosmos
cosmos-sdk-proto.workspace = true
cosmrs = { workspace = true, features = ["cosmwasm"] }
cosmwasm-std.workspace = true
tendermint = { workspace = true, features = ["secp256k1"] }

# quartz
quartz-cw.workspace = true
quartz-tee-ra.workspace = true
quartz-proto.workspace = true
