[package]
name = "quartz-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
authors.workspace = true

[features]
full = ["contract", "enclave", "proto"]
contract = ["dep:quartz-cw"]
enclave = ["dep:quartz-enclave", "proto"]
proto = ["dep:quartz-proto"]
mock-sgx-cw = ["quartz-cw/mock-sgx"]
mock-sgx-enclave = ["quartz-enclave/mock-sgx"]

[dependencies]
quartz-cw = { workspace = true, optional = true }
quartz-proto = { workspace = true, optional = true }
quartz-enclave = { workspace = true, optional = true }