[package]
name = "quartz-enclave"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
color-eyre = "0.6.2"
cosmrs = "0.16.0"
cosmwasm-std = "1.5.2"
ecies = { version = "0.2.3", default-features = false, features = ["pure"] }
k256 = { version = "0.13.2", default-features = false, features = ["ecdsa", "alloc"] }
prost = "0.12"
rand = "0.8.5"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.94"
tendermint = "0.34.0"
tendermint-light-client = "0.34.0"
tonic = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

cw-proof = { path = "../light-client-proofs/cw-proof" }
cw-tee-mtcs = { path = "../../apps/mtcs/contracts/cw-tee-mtcs" }
cycles-sync = { path = "../../utils/cycles-sync" }
mtcs = { git = "ssh://git@github.com/informalsystems/mtcs.git" }
quartz-cw = { path = "../../cosmwasm/packages/quartz-cw" }
quartz-proto = { path = "../quartz-proto" }
quartz-relayer = { path = "../../relayer" }
quartz-tee-ra = { path = "../../cosmwasm/packages/quartz-tee-ra" }
tm-stateless-verifier = { path = "../light-client-proofs/tm-stateless-verifier" }
hex = "0.4.3"

[build-dependencies]
tonic-build = "0.11"
