[package]
name = "quartz-enclave"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["blockchain", "cosmos", "tendermint", "cycles", "quartz"]
readme = "README.md"

[lib]
path = "src/lib.rs"

[dependencies]
# external
clap.workspace = true
color-eyre.workspace = true
ecies.workspace = true
hex.workspace = true
k256.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tonic.workspace = true
tokio.workspace = true

# cosmos
cosmrs.workspace = true
cosmwasm-std.workspace = true
tendermint.workspace = true
tendermint-light-client.workspace = true

# quartz
cw-proof.workspace = true
cw-tee-mtcs.workspace = true
cycles-sync.workspace = true
mtcs.workspace = true
quartz-cw.workspace = true
quartz-proto.workspace = true
quartz-relayer.workspace = true
quartz-tee-ra.workspace = true
tm-stateless-verifier.workspace = true

[build-dependencies]
tonic-build.workspace = true
