[package]
name = "quartz-rs"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true
keywords = ["blockchain", "cosmos", "tendermint", "cycles", "quartz"]
readme = "README.md"

[[bin]]
name = "quartz"
path = "src/main.rs"

[dependencies]
async-trait.workspace = true
cargo-generate.workspace = true
clap = { workspace = true, features = ["env"] }
color-eyre.workspace = true
displaydoc.workspace = true
dirs = "5.0.1"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
hex.workspace = true
k256.workspace = true
prost.workspace = true
tokio = { workspace = true, features = ["process"] }
tonic.workspace = true
once_cell = "1.19.0"
reqwest = { workspace = true, default-features = false, features = ["json", "rustls-tls"] }
anyhow.workspace = true
base64 = "0.22.1"
subtle-encoding.workspace = true
futures-util = "0.3.30"
target-lexicon = "0.12.16"
regex = "1.10.5"
watchexec = "4.1.0"
watchexec-events = "3.0.0"
watchexec-signals = "3.0.0"
miette = "7.2.0"
xxhash-rust = { version = "0.8.12", features = ["xxh3"] }
toml = "0.8.19"
figment = { version = "0.10.19", features = ["env", "toml"] }
clearscreen = "3.0.0"
cargo_metadata = "0.18.1"
serde_with = "3.10.0"

# cosmos
cosmrs.workspace = true
cosmwasm-std.workspace = true
tendermint.workspace = true
tendermint-light-client.workspace = true
tendermint-rpc = { workspace = true, features = ["websocket-client", "http-client"] }
quartz-tm-prover = { workspace = true }
quartz-common = { workspace = true, features = ["full"] }
quartz-tee-ra = { workspace = true }
cw-client.workspace = true
tempfile.workspace = true
