[package]
name = "quartz-rs"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories = [
  "command-line-utilities",
  "cryptography::cryptocurrencies",
  "hardware-support",
  "wasm",
]
keywords = ["cosmos", "cosmwasm", "cycles", "quartz", "sgx"]
readme = "README.md"
default-run = "quartz"
description = """
A CLI tool to streamline development and deployment of Quartz applications. Quartz is a flexible framework for privacy-preserving computation via Trusted Execution Environments (TEEs) organized and secured by smart contracts.
"""

[[bin]]
name = "quartz"
path = "src/main.rs"

[[bin]]
name = "gen-quote"
path = "src/bin/gen-quote.rs"

[dependencies]
async-trait.workspace = true
cargo-generate.workspace = true
clap = { workspace = true, features = ["env"] }
color-eyre.workspace = true
dirs = "5.0.1"
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
hex.workspace = true
tokio = { workspace = true, features = ["process"] }
tonic.workspace = true
reqwest = { workspace = true, default-features = false, features = [
  "json",
  "rustls-tls",
] }
subtle-encoding.workspace = true
futures-util = "0.3.30"
target-lexicon = "0.12.16"
regex = "1.10.5"
watchexec = "4.1.0"
watchexec-signals = "3.0.0"
xxhash-rust = { version = "0.8.12", features = ["xxh3"] }
figment = { version = "0.10.19", features = ["env", "toml"] }
cargo_metadata = "0.18.1"
serde_with = "3.10.0"
dcap-qvl = "0.1.0"


# cosmos
cosmrs.workspace = true
tendermint.workspace = true
tendermint-rpc = { workspace = true, features = [
  "websocket-client",
  "http-client",
] }
quartz-tm-prover = { workspace = true }
quartz-common = { workspace = true, features = ["full"] }
cw-client.workspace = true
tempfile.workspace = true

# Pinning (temporarily) transitive deps to versions compatible with rustc 1.81.0.
backtrace = "=0.3.74"
base64ct = "=1.7.3"
ed25519-zebra = "=4.0.3"
idna_adapter = "=1.1.0"
liquid-core = "=0.26.9"
liquid-lib = "=0.26.9"
liquid-derive = "=0.26.8"
litemap = "=0.7.5"
zerovec = "=0.10.4"
zerotrie = "=0.1.3"
