[package]
name = "quartz-common"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["blockchain", "cosmos", "tendermint", "cycles", "quartz"]
readme = "README.md"
description = """
A wrapper crate around quartz-contract-core, quartz-enclave-core, and quartz-proto.
"""

[features]
full = ["contract", "enclave", "proto"]
contract = ["dep:quartz-contract-core"]
enclave = ["dep:quartz-enclave-core", "proto"]
proto = ["dep:quartz-proto"]
mock-sgx-cw = ["quartz-contract-core/mock-sgx"]
mock-sgx-enclave = ["quartz-enclave-core/mock-sgx"]

[dependencies]
quartz-contract-core = { workspace = true, optional = true }
quartz-proto = { workspace = true, optional = true }
quartz-enclave-core = { workspace = true, optional = true }
