[package]
name = "quartz-enclave"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
color-eyre = "0.6.2"
prost = "0.12"
tendermint = "0.34.0"
tendermint-light-client = "0.34.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.94"
tonic = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

quartz-proto = { path = "../../utils/quartz-proto" }
