[package]
name = "cw-prover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
cosmrs = "0.15.0"
ibc-proto = "=0.38.0"
ibc-relayer-types = "=0.26.4"
ics23 = "0.11.0"
prost = "0.12.3"
serde_json = "1.0.108"
tendermint = "0.34.0"
tendermint-rpc = { version = "0.34.0", features = ["http-client"] }
tokio = { version = "1.26.0", features = ["full"] }
