[package]
name = "cw-prover"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["blockchain", "cosmos", "cosmwasm", "cycles", "quartz"]
readme = "README.md"

[dependencies]
# external
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true

# cosmos
cosmrs.workspace = true
tendermint.workspace = true
tendermint-rpc.workspace = true

# quartz
cw-proof.workspace = true

[dev-dependencies]
hex.workspace = true
