[package]
name = "cycles-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.79"
bip32 = { version = "0.5.1" , features = ["alloc"] }
clap = { version = "4.4.6", features = ["derive"] }
cosmrs = "0.16.0"
cosmwasm-std = "1.5.2"
displaydoc = "0.2.4"
ecies = { version = "0.2.6", default-features = false, features = ["pure"] }
hex = "0.4.3"
rand_core = { version = "0.6", features = ["std"] }
reqwest = { version = "0.12.2", features = ["json"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
subtle-encoding = "0.5.1"
thiserror = "1.0.49"
tokio = { version = "1.33.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.39"
tracing-subscriber = "0.3.17"
uuid = { version = "1.4.1", features = ["serde"] }
rand = "0.8.5"
