[package]
name = "mtcs-intent"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["blockchain", "cosmos", "tendermint", "cycles", "quartz"]
readme = "README.md"

[dependencies]
# external
bip32.workspace = true
clap.workspace = true
ecies.workspace = true
hex.workspace = true
k256.workspace = true
rand = { workspace = true, default-features = true }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

# cosmos
cosmrs.workspace = true
cosmwasm-std.workspace = true
