[package]
name = "quartz-relayer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
cosmwasm-std = "1.4.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.94"
tonic = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

quartz-cw = { git = "ssh://git@github.com/informalsystems/bisenzone-cw-mvp.git", branch = "hu55a1n1/11-use-quartz" }
quartz-proto = { path = "../../utils/quartz-proto" }
